2003-10-27  Laurent Sansonetti  <laurent@datarescue.be>

	* sample/print_config.rb: New file.
	* src/rbgdadatasource.c: Introduced Gda::DataSource.model.
	* src/rbgdaprovider.c: Introduced Gda::Provider.model.

2003-10-25  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgdadatasource.c: Gda::DataSource.new now allows nil
	  as password.
	* src/rbgdadatamodel.c: Gda::DataModel#to_xml can now be used
	  without the standalone parameter (which is false by default).
	* src/rbgdaquarklist.c, tests/tc_quarklist.rb: New files.
	* src/rbgda.c: Initializes Gda::QuarkList.
	* src/rbgda.h: Added macros for Gda::QuarkList.

2003-10-06  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgdaexport.c: New file.
	* src/rbgda.c: Initializes Gda::Export.
	* src/rbgda.h: Added macros for Gda::Export.

2003-10-04  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgdaselect.c, src/rbgdatable.c: New files.
	* src/rbgda.c: Initializes Gda::Select & Gda::Table.
	* src/rbgda.h: Added macros for Gda::Select & Gda::Table.

2003-10-03  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgdafieldattributes.c: New file.
	* src/rbgda.c: Initializes Gda::FieldAttributes.
	* src/rbgda.h: Added macros for Gda::FieldAttributes.
	* src/rbgdadatamodel: Added a few methods (#emit_changed, 
	  #emit_row_inserted, #emit_row_updated, #emit_row_removed,
	  #freeze!, #thaw!, #describe_column, #append_row, #remove_row,
	  #update_row, #editable?, #editing?, #begin_edit, #cancel_edit,
	  #end_edit, #to_comma_separated, #to_tab_separated, #to_xml,
	  #command_text, #set_command_text, #command_type, #set_command_type). 

2003-10-02  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgdadatamodelhash.c, src/rbgdadatamodellist.c: New files.
	* src/rbgda.c: Initializes Gda::DataModelHash & Gda::DataModelList.
	* src/rbgda.h: Added macros for Gda::DataModelHash & Gda::DataModelList.

2003-10-01  Laurent Sansonetti  <laurent@datarescue.be>
